Update README.md and _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,9 @@
 # Setup
-title: Poole
-tagline: The Jekyll Butler
-url: https://hy20191108.github.io/hy20191108/
-paginate: 1
-baseurl: "https://hy20191108.github.io/hy20191108/"
-permalink: pretty
+# title: Poole
+# url: https://hy20191108.github.io/hy20191108/
+# paginate: 1
+# baseurl: "https://hy20191108.github.io/hy20191108/"
+# permalink: pretty
 
 # Gems
 plugins:
