Update _config.yml: Change title to NAIST学生 吉岡春彦 研究業績一覧

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Setup
-# title: Poole
+title: NAIST学生 吉岡春彦 研究業績一覧
 # url: https://hy20191108.github.io/hy20191108/
 # paginate: 1
 # baseurl: "https://hy20191108.github.io/hy20191108/"
