ナビゲーションバーを追加し、英語と日本語のリダイレクトを実装。新しい設定ファイルを作成し、研究業績ページを追加。

--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ markdown: kramdown
 plugins:
   - jekyll-gist
   - jekyll-paginate
+  - jekyll-redirect-from
   - jekyll-seo-tag
   - jekyll-sitemap
 
