Dockerfileとdocker-compose.ymlを追加し、Jekyll環境の構築を設定

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,7 @@
-version: '3'
 services:
   jekyll:
-    image: jekyll/jekyll:latest
-    volumes:
-      - .:/srv/jekyll
+    build: .
     ports:
-      - "4000:4000"
-    command: jekyll serve --watch --host 0.0.0.0
+      - 4000:4000
+    volumes:
+      - ".:/srv/jekyll"
