サイトのSEO設定を追加し、言語選択のインターフェースを改善しました。各ページに言語メタタグを追加し、構造化データを用いてプロフィール情報を強化しました。また、英語と日本語のリダイレクトを設定しました。

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,10 @@ title: Haruhiko Yoshioka's Homepage
 show_downloads: true
 markdown: kramdown
 
+# Site settings for SEO
+url: "https://hy20191108.github.io"
+baseurl: ""
+
 # Gems
 plugins:
   - jekyll-coffeescript
